--- a/page/src/app/home/home.page.html
+++ b/page/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-     ssss
+     ssssaa
     </ion-title>
   </ion-toolbar>
 </ion-header>
