--- a/page/src/app/login/login.page.html
+++ b/page/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-     LOGIN
+     sssssaa
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,4 +15,7 @@
   <ion-item>
     <ion-input label="PASSWORD" type="password" ></ion-input>
   </ion-item>
+
+  <ion-button>Default</ion-button>
+
 </ion-content>
