--- a/page/src/app/home/home.page.html
+++ b/page/src/app/home/home.page.html
@@ -1,20 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-     ssssaa
+     sssssaa
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">tiltsulo</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<DIv>
+  <a href=""></a>
+</DIv>
 </ion-content>
