Creacion de pages

--- a/page/src/app/home/home.page.html
+++ b/page/src/app/home/home.page.html
@@ -1,13 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-     sssssaa
+      TeLlevoAPP
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-<DIv>
-  <a href=""></a>
-</DIv>
+  <h1>BIENVENIDO!!!!</h1>
 </ion-content>
