--- a/page/src/app/app.component.html
+++ b/page/src/app/app.component.html
@@ -1,18 +1,3 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-     LOGIN
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-
-  <ion-item>
-    <ion-input label="USERNAME"></ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-input label="PASSWORD" type="password" ></ion-input>
-  </ion-item>
-</ion-content>
+<ion-app>
+  <ion-router-outlet></ion-router-outlet>
+</ion-app>
