--- a/page/src/app/login/login.page.html
+++ b/page/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-     sssssaa
+     LOGIN
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -16,6 +16,7 @@
     <ion-input label="PASSWORD" type="password" ></ion-input>
   </ion-item>
 
-  <ion-button>Default</ion-button>
+  <ion-button>LOGIN</ion-button>
+  <ion-button>RESTABLECER CONTRASEÑA</ion-button>
 
 </ion-content>
