--- a/page/src/app/login/login.page.html
+++ b/page/src/app/login/login.page.html
@@ -6,17 +6,29 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-
-  <ion-item>
-    <ion-input label="USERNAME"></ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-input label="PASSWORD" type="password" ></ion-input>
-  </ion-item>
-
-  <ion-button>LOGIN</ion-button>
-  <ion-button>RESTABLECER CONTRASEÑA</ion-button>
-
+<ion-content>
+  <ion-card>
+    <ion-card-content>
+      <form [formGroup]="formularioLogin">
+        <ion-item>
+          <ion-label position="floating">USERNAME</ion-label>
+          <ion-input formControlName="nombre"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">PASSWORD</ion-label>
+          <ion-input formControlName="password" type="password"></ion-input>
+        </ion-item>
+      </form>
+      <br>
+      <ion-button (click)="ingresar()">
+        Ingresar
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-button [routerLink]="['/registro']">REGISTRATE</ion-button>
+  </ion-toolbar>
+</ion-footer>
