--- a/page/src/app/login/login.page.html
+++ b/page/src/app/login/login.page.html
@@ -23,6 +23,8 @@
       <ion-button (click)="ingresar()">
         Ingresar
       </ion-button>
+      <br>
+      <a href="">¿Olvidaste tu contraseña?</a>
     </ion-card-content>
   </ion-card>
 </ion-content>
