--- a/page/src/app/inicio/inicio.page.html
+++ b/page/src/app/inicio/inicio.page.html
@@ -7,7 +7,22 @@
 <ion-content [fullscreen]="true">
 
 <h1>BIENVENIDO A TeLlevoApp</h1>
+<br>
+<h4>¿Como deseas ingresar?</h4>
 
-  <ion-button (click)="salir()" routerDirection="login" lines="none" detail="false">Salir</ion-button>
+<ion-button [routerLink]="['/conductor']">
+  Conductor
+</ion-button>
+
+<ion-button [routerLink]="['/alumno']">
+  Alumno
+</ion-button>
 
 </ion-content>
+
+<ion-footer>
+  <ion-button [routerLink]="['/login']">
+    Salir
+  </ion-button>
+  
+</ion-footer>
