--- a/page/src/app/conductor/conductor.page.html
+++ b/page/src/app/conductor/conductor.page.html
@@ -11,3 +11,10 @@
     </ion-toolbar>
   </ion-header>
 </ion-content>
+
+<ion-footer>
+  <ion-button (click)="CerrarSesion()">
+    Salir
+  </ion-button>
+  
+</ion-footer>
