--- a/page/src/app/inicio/inicio.page.html
+++ b/page/src/app/inicio/inicio.page.html
@@ -21,7 +21,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-button [routerLink]="['/login']">
+  <ion-button (click)="CerrarSesion()">
     Salir
   </ion-button>
   
