--- a/page/src/app/login/login.page.html
+++ b/page/src/app/login/login.page.html
@@ -25,7 +25,7 @@
       </ion-button>
       <br>
       <br>
-      <a href="">¿Olvidaste tu contraseña?</a>
+      <a href="rpassword">¿Olvidaste tu contraseña?</a>
     </ion-card-content>
   </ion-card>
 </ion-content>
