--- a/page/src/app/rpassword/rpassword.page.html
+++ b/page/src/app/rpassword/rpassword.page.html
@@ -1,6 +1,9 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>rpassword</ion-title>
+<ion-header>
+  <ion-toolbar color="header" class="ion-text-center">
+    <ion-title>aaaa</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button href="/login"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -9,11 +12,13 @@
     <ion-card-content>
       <form>
         <ion-item>
-          <ion-input position="floating">USERNAME</ion-input>
+          <ion-input class="ion-text-center" position="floating">
+            Username
+          </ion-input>
         </ion-item>
       </form>
       <br>
-      <ion-button>
+      <ion-button color="boton" class="center">
         Recuperar
       </ion-button>
     </ion-card-content>
