--- a/page/src/app/alumno/alumno.page.html
+++ b/page/src/app/alumno/alumno.page.html
@@ -1,19 +1,30 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Alumno</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-menu side="end" contentId="main-content">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">alumno</ion-title>
+      <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-content class="ion-padding"> 
+    <ion-button color="boton" class="center" (click)="CerrarSesion()">
+        Cerrar Sesión
+      </ion-button>
+  </ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar color="header">
+      <ion-title class="ion-text-center">Pasajero</ion-title>
+      <ion-buttons slot="start">
+        <ion-back-button default-href="/inicio"></ion-back-button>
+      </ion-buttons>
+      <ion-buttons slot="end">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+
+<ion-content [fullscreen]="true">
+<ion-card>
+  <h1>Hola</h1>
+</ion-card>
 </ion-content>
-<ion-footer>
-  <ion-button (click)="CerrarSesion()">
-    Salir
-  </ion-button>
-  
-</ion-footer>
