--- a/page/src/app/login/login.page.html
+++ b/page/src/app/login/login.page.html
@@ -11,8 +11,8 @@
     <ion-card-content>
       <form [formGroup]="formularioLogin">
         <ion-item >
-          <ion-label class="center" position="floating">Username</ion-label>
-          <ion-input formControlName="nombre"></ion-input>
+          <ion-label class="center" position="floating">Mail Duoc</ion-label>
+          <ion-input formControlName="mail_duoc"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label class="center" position="floating">password</ion-label>
