--- a/page/src/app/registro/registro.page.html
+++ b/page/src/app/registro/registro.page.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <body>
+  <br>
 <ion-content>
   <ion-card>
     <ion-card-header>
@@ -20,7 +21,7 @@
         
         <ion-item>
           <ion-label class="center" position="floating">Apellidos</ion-label>
-          <ion-input formControlName="apellido"></ion-input>
+          <ion-input formControlName="apellidos"></ion-input>
         </ion-item>
 
         <ion-item>
@@ -30,7 +31,7 @@
 
         <ion-item>
           <ion-label class="center" position="floating">Mail Duoc</ion-label>
-          <ion-input formControlName="mailDuoc"></ion-input>
+          <ion-input formControlName="mail_duoc"></ion-input>
         </ion-item>
 
         <ion-item>
