--- a/page/src/app/conductor/conductor.page.html
+++ b/page/src/app/conductor/conductor.page.html
@@ -30,6 +30,7 @@
       <ion-card-content>
         <form [formGroup]="formularioViaje">
           <h1 class="center">Informacion Viaje</h1>
+
           <ion-item >
             <ion-label class="center" position="floating">Origen</ion-label>
             <ion-input formControlName="origen"></ion-input>
@@ -41,27 +42,31 @@
           </ion-item>
 
           <ion-item >
+            <ion-label class="center" position="floating">Fecha</ion-label>
+            <ion-input formControlName="fecha"></ion-input>
+          </ion-item>
+
+          <ion-item >
+            <ion-label class="center" position="floating">Hora</ion-label>
+            <ion-input formControlName="hora"></ion-input>
+          </ion-item>
+
+          <ion-item >
             <ion-label class="center" position="floating">Costo</ion-label>
             <ion-input formControlName="costo"></ion-input>
           </ion-item>
 
           <ion-item >
             <ion-label class="center" position="floating">Asientos Disponibles</ion-label>
-            <ion-input formControlName="asiDispo"></ion-input>
+            <ion-input formControlName="asiento_disponible"></ion-input>
           </ion-item>
 
-        </form>
-      </ion-card-content>
-    </ion-card>
+          <br>
+          <br>
 
-    <hr>
-    <hr>
-
-      <ion-card>
-        <ion-card-content>
-          <form [formGroup]="formularioAuto">
             <h1 class="center">Informacion Auto</h1>
-            <ion-item >
+
+            <ion-item>
               <ion-label class="center" position="floating">Patente</ion-label>
               <ion-input formControlName="patente"></ion-input>
             </ion-item>
@@ -85,7 +90,7 @@
         </ion-card-content>
       </ion-card>
 
-    <ion-button color="boton" class="center" (click)="guardarViaje()">
+    <ion-button (click)="setviaje()" color="boton" class="center">
       Subir
     </ion-button>
 
