Get id en origen y destino

--- a/page/src/app/carga/carga.page.html
+++ b/page/src/app/carga/carga.page.html
@@ -1,13 +1,20 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>carga</ion-title>
+    <ion-title>Carga Page</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">carga</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <!-- Muestra la información del viaje -->
+  <ion-card>
+    <ion-card-header>
+     <h1>ñ</h1>
+    </ion-card-header>
+    <ion-card-content>
+      <!-- Muestra otros detalles del viaje -->
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Otros elementos de la página de carga -->
 </ion-content>
+
